# brt

./: .gitignore  CMakeLists.txt  dyn_array.hpp  err.cpp  err.hpp  err.inl  heap_array.hpp  io.cpp  io.hpp  macros.hpp  math.hpp  math.inl  memory.hpp  memory.inl  opnewdel.cpp  optional.hpp  rand.cpp  rand.hpp  rand.inl  span.hpp  stack_alloc.cpp  stack_alloc.hpp  stack_alloc.inl  string.hpp  sync.hpp  types.hpp  utils.cpp  utils.hpp  utils.inl  virtual.cpp  virtual.hpp
cmake/: cxx-setup.cmake  gas-find-deps.cmake  sys-detect.cmake  toolchain.cmake
